--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -91,3 +91,22 @@ h1 {
         height: 500px; /* 작은 화면에서의 높이 조정 */
     }
 }
+#calculateDistanceBtn:hover {
+    background-color: #007bff;
+    color: white;
+}
+.modal-body {
+    max-height: 400px; /* 최대 높이 설정 */
+    overflow-y: auto; /* 세로 스크롤 가능 */
+}
+.distance-result {
+    font-size: 1.2rem; /* 폰트 크기 */
+    color: #333; /* 글자 색상 */
+    background-color: #f8f9fa; /* 배경 색상 */
+    border: 1px solid #dee2e6; /* 테두리 색상 */
+    border-radius: 8px; /* 모서리 둥글게 */
+    padding: 15px; /* 여백 */
+    margin-top: 10px; /* 위쪽 여백 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+    text-align: center; /* 가운데 정렬 */
+}
